# chatbot-summit-agents-workshop

./: .env.example  .gitignore  README.md
.devcontainer/: devcontainer.json
backend/: pyproject.toml
backend/src/agent/: context.py  evaluator.py  intent.py  profiler.py
backend/src/guardrails/: input_guardrails.py
backend/src/models/: completions.py
backend/src/services/: chat_service.py
